third_party/move/move-compiler-v2/tests/checking/typing/global_builtins_script.exp

Diagnostics:
error: Invalid storage operation on external type `M::R`
   ┌─ tests/checking/typing/global_builtins_script.move:14:5
   │
14 │ fun test<Token>(account: signer) {
   │     ^^^^
15 │     let r = M::new();
16 │     borrow_global<M::R>(@0x1);
   │     ------------------------- called here

error: Invalid storage operation on external type `M::R`
   ┌─ tests/checking/typing/global_builtins_script.move:14:5
   │
14 │ fun test<Token>(account: signer) {
   │     ^^^^
   ·
17 │     move_to(&account, r);
   │     -------------------- called here
